refactor: 使用 OpenRewrite CommonStaticAnalysis 清理代码并修复文档
1. 应用 CommonStaticAnalysis 配方进行代码清理：
   - 简化布尔表达式
   - 使用菱形操作符 <>
   - 替换过时的包装类构造函数 (new Integer -> Integer.valueOf)
   - 移除冗余字符串拼接
2. 修正 QUICKSTART.md 中的配方名称 (java.cleanup -> staticanalysis)